--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ body {
     padding: 5px 30px ;
     border-radius: 10px ;
     font-size: 1.1rem;
+    box-shadow : 0px 4px 8px rgba(0,0,0,.7) ;
 }
 
 .gallery {
@@ -68,3 +69,14 @@ body {
     height: 120px ;
 }
 
+.thumbnail {
+    border: 2px solid orange ;
+    box-shadow : 0px 4px 8px rgba(0,0,0,.7) ;
+
+}
+
+.thumbnail.selected {
+    border: 2px solid red ;
+    box-shadow : 0px 4px 8px rgba(0,0,0,.7) ;
+    
+}
