--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ body {
     
 }
 
+.time-info * {
+    font-family: cursive ;
+    margin-left: 30px ;
+}
+
 .container-image{
     
     position: relative ;
